Smooshing redundant rows

--- a/index.html
+++ b/index.html
@@ -254,12 +254,8 @@
 						<td>Perpendicular to = <a target="_blank" href="https://cadquery.readthedocs.io/en/latest/classreference.html#cadquery.PerpendicularDirSelector">PerpendicularDirSelector</a></td>
 					</tr>
 					<tr>
-						<td>&#43;</td>
-						<td>Positive direction = <a target="_blank" href="https://cadquery.readthedocs.io/en/latest/classreference.html#cadquery.DirectionSelector">DirectionSelector</a></td>
-					</tr>
-					<tr>
-						<td>&#45;</td>
-						<td>Negative direction = <a target="_blank" href="https://cadquery.readthedocs.io/en/latest/classreference.html#cadquery.DirectionSelector">DirectionSelector</a></td>
+						<td>+/-</td>
+						<td>Pos/Neg direction = <a target="_blank" href="https://cadquery.readthedocs.io/en/latest/classreference.html#cadquery.DirectionSelector">DirectionSelector</a></td>
 					</tr>
 					<tr>
 						<td>&gt;</td>
