Fixing more links

--- a/index.html
+++ b/index.html
@@ -308,9 +308,9 @@
 				<h2><a target="_blank" href="https://cadquery.readthedocs.io/en/latest/apireference.html#d-operations">Workplane Positioning</a></h2>
 				<table>
 					<tr>
-						<td><a target="_blank" href="https://cadquery.readthedocs.io/en/latest/classreference.html#cadquery.Workplane.rect">translate</a><br><small>(Vector(x, y, z))</small></td>
-						<td><a target="_blank" href="https://cadquery.readthedocs.io/en/latest/classreference.html#cadquery.Workplane.circle">rotateAboutCenter</a><br><small>(Vector(x, y, z), angleDegrees)</small></td>
-						<td><a target="_blank" href="https://cadquery.readthedocs.io/en/latest/classreference.html#cadquery.Workplane.circle">rotate</a><br><small>(Vector(x, y, z), Vector(x, y, z), angleDegrees)</small></td>
+						<td><a target="_blank" href="https://cadquery.readthedocs.io/en/latest/classreference.html#cadquery.Workplane.translate">translate</a><br><small>(Vector(x, y, z))</small></td>
+						<td><a target="_blank" href="https://cadquery.readthedocs.io/en/latest/classreference.html#cadquery.Workplane.rotateAboutCenter">rotateAboutCenter</a><br><small>(Vector(x, y, z), angleDegrees)</small></td>
+						<td><a target="_blank" href="https://cadquery.readthedocs.io/en/latest/classreference.html#cadquery.Workplane.rotate">rotate</a><br><small>(Vector(x, y, z), Vector(x, y, z), angleDegrees)</small></td>
 					</tr>
 					<tr>
 						<td colspan="3">
